--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       rel="stylesheet"
     />
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <!-- responsive style -->
-    <link href="css/responsive.css" rel="stylesheet" />
+    <link href="responsive.css" rel="stylesheet" />
   </head>
 
   <body>
