--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       rel="stylesheet"
     />
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="css/responsive.css" rel="stylesheet" />
   </head>
