--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
               </div>
               <div id="myNav" class="overlay">
                 <div class="overlay-content">
-                  <a href="index.html">Home</a>
-                  <a href="about.html">About</a>
-                  <a href="feature.html">Features</a>
-                  <a href="contact.html">Contact Us</a>
+                  <a href="index.html">Inicio</a>
+                  <a href="about.html">Ajuda</a>
+                  <a href="feature.html">Sobre Nós</a>
+                  <a href="contact.html">Categorias</a>
                 </div>
               </div>
             </div>
@@ -102,7 +102,7 @@
                   <div class="slider_item-container">
                     <div class="slider_item-detail">
                       <h1>
-                        PROVIDES TO MAKE BETTER SOFTWARE
+                        
                       </h1>
                       <p>
                         Marketers/advertisers usually focus their efforts on the
