--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                   <div class="slider_item-container">
                     <div class="slider_item-detail">
                       <h1>
-                        PROVIDES TO MAKE BETTER SOFTWARE
+                        natural disaster in  the world
                       </h1>
                       <p>
                         Marketers/advertisers usually focus their efforts on the
